--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,52 @@
+html,
 body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
   font-family: "Roboto", sans-serif;
   color: #ffffff;
-  background-color: rgba(0, 0, 0, 0.94);
+  background-image: linear-gradient(to right, #434343 0%, black 100%);
+}
+
+.App {
+  display: flex;
+  flex-direction: row;
+  /* align-items: center; */
+  justify-content: center;
+}
+
+.app-mainContainner {
+  position: absolute;
+  left: 15rem;
+  width: 100;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.app-container1 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.app-container2 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.app-int2 {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.app-int3 {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
