--- a/src/component/github/github.css
+++ b/src/component/github/github.css
@@ -1,10 +1,9 @@
-.contact-container {
+.github-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
-    width: 19rem;
+    width: 18.7rem;
     height: 12rem;
     background: rgba( 0, 0, 0, 0.75 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
@@ -15,7 +14,18 @@
     color: white;
 }
 
-.contact-item img{
-    width: 3rem;
-    height: 3rem;
+.github {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+}
+.github img{
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+.github-content {
+    font-size: 1rem;
+    font-weight: 600;
+    text-align: start;
 }
