--- a/src/component/work/work.css
+++ b/src/component/work/work.css
@@ -11,7 +11,7 @@
     -webkit-backdrop-filter: blur( 17px );
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     border-radius: 1rem ;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .work-h1 {
@@ -19,68 +19,57 @@
 }
 
 .timeline-container {
-    max-width: 12rem;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-height: 100%; 
-    overflow-y: scroll; 
-    border-left: 3px solid #ffffff; 
-    padding-left: 30px; 
-    scrollbar-width: none; 
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.road1 {
+  text-align: start;
+  padding: 0.5rem;
+  border-left: 0.5rem solid rgba(255, 255, 255, 0.285);
+  border-top: 0.5rem solid rgba(255, 255, 255, 0.285);
+  border-bottom: 0.25rem solid rgba(255, 255, 255, 0.285);
+  width: 9rem;
+  height: 5rem;
+  border-radius: 1rem 1rem 0 0;
+}
   
-  .timeline-container::-webkit-scrollbar {
-    display: none; 
-  }
-  
-  .timeline {
-    margin-top: 7rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem; 
-  }
-  
-  .timeline-item {
-    padding: 1rem;
-    position: relative;
-  }
-  
-  .timeline-item:before {
-    content: '';
-    position: absolute;
-    left: -2.6rem; 
-    top: 50%; 
-    transform: translateY(-50%); 
-    width: 16px;
-    height: 16px; 
-    border-radius: 50%; 
-    background-color: #ffffff; 
-  }
-  
-  .timeline-year {
-    font-size: 1rem;
-    font-weight: bold;
-    color: #4CAF50;
-  }
-  
-  .timeline-content h3 {
-    font-size: 1rem;
-    color: #ffffff;
-    margin: 5px 0;
-  }
-  
-  .timeline-content p {
-    font-size: 16px;
-    color: #dddcdc;
-    margin: 0;
-  }
-  
-  .timeline-item {
-    border: 0.2rem solid white;
-    border-radius: 1rem;
-  }
-  
+.road1 p {
+  font-size: 0.7rem;
+  font-weight: 600;
+}
+
+.road2 {
+  text-align: end;
+  padding: 0.5rem;
+  border-right: 0.5rem solid rgba(255, 255, 255, 0.285);
+  border-top: 0.25rem solid rgba(255, 255, 255, 0.285);
+  border-bottom: 0.25rem solid rgba(255, 255, 255, 0.285);
+  width: 9rem;
+  height: 5rem;
+}
+
+.road2 p {
+  font-size: 0.7rem;
+  font-weight: 600;
+}
+
+.road3 {
+  text-align: start;
+  padding: 0.5rem;
+  border-left: 0.5rem solid rgba(255, 255, 255, 0.285);
+  border-top: 0.25rem solid rgba(255, 255, 255, 0.285);
+  border-bottom: 0.5rem solid rgba(255, 255, 255, 0.285);
+  width: 9rem;
+  border-radius: 0 0 1rem 1rem;
+  height: 5rem;
+}
+
+.road3 p {
+  font-size: 0.7rem;
+  font-weight: 600;
+}
   
   
