--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,6 @@ body {
 }
 
 .App {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -24,6 +20,12 @@ body {
 .app-container1 {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+}
+
+.app-int1 {
+  display: flex;
+  flex-direction: row;
   gap: 1rem;
 }
 
@@ -43,4 +45,37 @@ body {
   display: flex;
   flex-direction: row;
   gap: 1rem;
+}
+
+
+/* Medium Devices */
+@media (max-width: 1024px) {
+  .App {
+    margin-top: 3rem;
+    flex-direction: column;
+  }
+
+  .app-int2,
+  .app-int3 {
+    flex-direction: column;
+  }
+}
+
+/* Small Devices */
+@media (max-width: 480px) {
+  .App {
+    margin-top: 0;
+    padding: 0.2rem;
+  }
+
+  .app-int2,
+  .app-int3 {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .app-container1,
+  .app-container2 {
+    width: 100%;
+  }
 }
