--- a/src/App.css
+++ b/src/App.css
@@ -29,12 +29,6 @@ body {
   gap: 1rem;
 }
 
-.app-container2 {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
 .app-int2 {
   display: flex;
   flex-direction: row;
@@ -65,17 +59,21 @@ body {
 @media (max-width: 480px) {
   .App {
     margin-top: 0;
-    padding: 0rem;
+    padding: 0.5rem;
+    gap: 0.5rem;
   }
 
+  .app-int1{
+    gap: 0.5rem;
+  }
   .app-int2,
   .app-int3 {
     flex-direction: column;
     gap: 0.5rem;
   }
 
-  .app-container1,
-  .app-container2 {
+  .app-container1{
+    gap: 0.5rem;
     width: 100%;
   }
 }
